fix: hidden body scrollbars.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,7 @@ body {
 	background: var(--primary-bg);
 	color: var(--text-color);
 	font-family: Poppins;
+	overflow: hidden;
 }
 
 * {
